added fevicon for the webpage

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Attendance Calculator</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="shortcut icon" href="/FEVICON/apple-touch-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/apple-touch-icon.png" type="image/x-icon">
     <meta
       http-equiv="Cache-Control"
       content="no-cache, no-store, must-revalidate"
@@ -17,7 +17,7 @@
   
     <div class="container">
       <div class="logo-container">
-        <img src="/LOGO/Framefinalsvg.svg" alt="Attendance Calculator Logo" class="logo">
+        <img src="/Framefinalsvg.svg" alt="Attendance Calculator Logo" class="logo">
     </div>
       <!-- <h1>Attendance Calculator</h1> -->
       <label for="desiredPercentage">Desired Attendance Percentage:</label>
