changed the logo - 1

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   
     <div class="container">
       <div class="logo-container">
-        <img src="Framefinalsvg.svg" alt="Attendance Calculator Logo" class="logo">
+        <img src="changed2.svg" alt="Attendance Calculator Logo" class="logo">
     </div>
       <!-- <h1>Attendance Calculator</h1> -->
       <label for="desiredPercentage">Desired Attendance Percentage:</label>
